fix contrast color text for mobil devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@ body,
 }
 @layer components {
   .heroButton {
-    @apply sm:px-6 sm:py-2 px-3 py-1 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
+    @apply sm:px-6 sm:py-2 px-3 py-1 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-400 transition-all hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
   }
   .contactInput {
     @apply outline-none  bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424]
